Fix bug with map on mobile devices

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -82,6 +82,8 @@
 .map {
   width: 100%;
   height: 100%;
+  min-height: 200px;
+  max-height: 400px;
   max-height: 234px;
 }
 
